--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -1,3 +1,23 @@
 <resources>
     <string name="app_name">OfflineModule</string>
+    <string name="password">Password</string>
+    <string name="login">Log in</string>
+    <string name="auth_title">Please, sign in.</string>
+    <string name="empty_password">Field \"Password\" can not be empty.</string>
+    <string name="no_fill_password">Password must be at least 6 characters long</string>
+    <string name="empty_new_screen_id">Field \"ID\" can not be empty.</string>
+    <string name="incorrect_password">Invalid password</string>
+    <string name="admin_panel">Admin dashboard</string>
+    <string name="confirm_changes">Confirm changes</string>
+    <string name="word_id">Id</string>
+    <string name="internet_connection_error">Internet connection error.</string>
+    <string name="connection_type">Connection type</string>
+    <string name="connection_types">ert</string>
+    <string name="select_connection_error">Please select the type of connection</string>
+
+    <string-array name="connection_types">
+        <item>Printer connection type</item>
+        <item>Wi-Fi direct</item>
+        <item>Bluetooth direct</item>
+    </string-array>
 </resources>
