--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -7,10 +7,10 @@
     <string name="no_fill_password">Password must be at least 6 characters long</string>
     <string name="empty_new_screen_id">Field \"ID\" can not be empty.</string>
     <string name="incorrect_password">Invalid password</string>
-    <string name="admin_panel">Admin dashboard</string>
-    <string name="confirm_changes">Confirm changes data</string>
-    <string name="confirm_printing">Confirm print type</string>
-    <string name="word_id">Id</string>
+    <string name="admin_panel">Admin Dashboard</string>
+    <string name="confirm_changes">Sync store data</string>
+    <string name="confirm_printing">Set printer type</string>
+    <string name="word_id">Store ID</string>
     <string name="internet_connection_error">Internet connection error.</string>
     <string name="connection_type">Connection type</string>
     <string name="connection_types">ert</string>
@@ -18,6 +18,6 @@
 
     <string-array name="connection_types">
         <item>Wi-Fi direct</item>
-        <item>Bluetooth direct</item>
+        <item>Bluetooth</item>
     </string-array>
 </resources>
